force-app/main/default/objects/OrgProperty__c/OrgProperty__c.object-meta.xml
<CustomObject>
    <description>Organization Property information retrieved during polling for the org search functionality</description>
    <label>OrgProperty</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgProperties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>