force-app/main/default/objects/OrgProperty__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Store the Abbreviation / INNCode for the property</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Abbreviation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>