force-app/main/default/objects/OrgProperty__c/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Property Address Field 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AddressLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>