force-app/main/default/objects/OrgProperty__c/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Property Address Field 3</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AddressLine3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>