force-app/main/default/objects/OrgProperty__c/fields/AHDEnabled__c.field-meta.xml
<CustomField>
    <fullName>AHDEnabled__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean field determining if property is AHD Enabled</description>
    <label>AHDEnabled</label>
    <type>Checkbox</type>
</CustomField>