force-app/main/default/objects/OrgProperty__c/fields/AvailabilityScreenView__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityScreenView__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Value of the Availability Screen View field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AvailabilityScreenView</label>
    <length>255</length>
    <type>Text</type>
</CustomField>