force-app/main/default/objects/OrgProperty__c/fields/BookingCount__c.field-meta.xml
<CustomField>
    <fullName>BookingCount__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Number of Bookings this property has</description>
    <label>BookingCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>