force-app/main/default/objects/OrgProperty__c/fields/BookingMaxCreateDate__c.field-meta.xml
<CustomField>
    <fullName>BookingMaxCreateDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>The last time this property created a booking</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BookingMaxCreateDate</label>
    <type>DateTime</type>
</CustomField>