force-app/main/default/objects/OrgProperty__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this property was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>