force-app/main/default/objects/OrgProperty__c/fields/DBRFPCount__c.field-meta.xml
<CustomField>
    <fullName>DBRFPCount__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Count of Inquiries this property has that are of record type RFP and Arrival Date is &gt; today and Status is Open or Working and RFP Status is in &apos;TurnedDown&apos;, &apos;Cancelled&apos;, &apos;SelfAwarded&apos;, &apos;Awarded&apos;</description>
    <label>DBRFPCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>