force-app/main/default/objects/OrgProperty__c/fields/DisableBookingDaySnapshot__c.field-meta.xml
<CustomField>
    <fullName>DisableBookingDaySnapshot__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean field showing if the Disable Booking Day Snapshot checkbox is checked or not</description>
    <label>DisableBookingDaySnapshot</label>
    <type>Checkbox</type>
</CustomField>