force-app/main/default/objects/OrgProperty__c/fields/HistoryCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>HistoryCreatedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date the property was created as per the Salesforce History table</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HistoryCreatedDate</label>
    <type>DateTime</type>
</CustomField>