force-app/main/default/objects/OrgProperty__c/fields/LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>User who last modified this property record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>