force-app/main/default/objects/OrgProperty__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this property was last modified</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>