force-app/main/default/objects/OrgProperty__c/fields/MigrationExternalId__c.field-meta.xml
<CustomField>
    <fullName>MigrationExternalId__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Migration External ID field for Data Services</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MigrationExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>