force-app/main/default/objects/OrgProperty__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Property Phone Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>