force-app/main/default/objects/OrgProperty__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Property Postal Code Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>