force-app/main/default/objects/OrgProperty__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Property State Province Field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>StateProvince</label>
    <length>255</length>
    <type>Text</type>
</CustomField>